@@ -8,10 +8,11 @@ CHANGES
 * fix to pair order in sample names when pivoted
 * fix to keeping unmapped reads when not needed
 * check samples match a previous raw.bcf file when running
-* re-added wgmlst code
 * plugin system for gui
 * gui - contam plugin added
 * gui - testing plugin
+* added manifest file option to cmd line
+* removed get samples from bams during workflow, redundant
 
 0.5.0
 -----
